--- a/P005542.opf/meta.yml
+++ b/P005542.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P005542
+id: P005542
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W19618
   title: ལམ་རིམ་ཟིན་བྲིས་མཁས་པའི་ཡིད་འཕྲོག
-  volume: ''
   author: ''
+  volumes: {}
