--- a/P005542.opf/layers/v001/Pagination.yml
+++ b/P005542.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 3ddc86732ace4ee2b5e42675b49579d0
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   be417f494232413c8755ebb1b7af23b0:
