--- a/P005542.opf/meta.yml
+++ b/P005542.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P005542
 initial_creation_type: ocr
+created_at: 29/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W19618
   title: ལམ་རིམ་ཟིན་བྲིས་མཁས་པའི་ཡིད་འཕྲོག
